--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Quiz"
         tools:targetApi="34">
         <activity
+            android:name=".Searchuseractivity"
+            android:exported="false" />
+        <activity
+            android:name=".MessageListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ChatActivity"
+            android:exported="false" />
+        <activity
             android:name="LogInactiviies.RegisterActivity"
             android:exported="false" />
         <activity
@@ -26,7 +35,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
     </application>
 
 </manifest>
