--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,10 +34,22 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.firebase:firebase-auth:23.0.0'
+
+    implementation platform('com.google.firebase:firebase-bom:32.0.0')
+    implementation 'com.github.bumptech.glide:glide:4.15.0'
+// Firebase BOM
+
+    // Firebase dependencies (no versions specified)
+    implementation 'com.google.firebase:firebase-auth'       // Firebase Authentication
+    implementation 'com.google.firebase:firebase-storage'    // Firebase Storage
+    implementation 'com.google.firebase:firebase-database'   // Firebase Realtime Database
+    implementation 'com.google.firebase:firebase-firestore'  // Firebase Firestore
+
     implementation 'com.github.ismaeldivita:chip-navigation-bar:1.4.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation 'com.google.firebase:firebase-database:21.0.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1' // Check for the latest version
+    implementation "com.airbnb.android:lottie:6.4.1"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
