--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,11 +44,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage'    // Firebase Storage
     implementation 'com.google.firebase:firebase-database'   // Firebase Realtime Database
     implementation 'com.google.firebase:firebase-firestore'  // Firebase Firestore
-
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.github.ismaeldivita:chip-navigation-bar:1.4.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1' // Check for the latest version
     implementation "com.airbnb.android:lottie:6.4.1"
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.google.android.material:material:1.9.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
